--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -16,7 +16,6 @@
     </div>
     <div data-key="83" class="key">
       <kbd>S</kbd>
-      <span class="sound">hihat</span>
     </div>
     <div data-key="68" class="key">
       <kbd>D</kbd>
@@ -59,7 +58,10 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  window.addEventListener('keydown', function(e) {
+    console.log(e)
 
+  });
 </script>
 
 
