--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,25 +59,27 @@
 
 <script>
   //records keystroke, plays back sound based on key 
-  window.addEventListener('keydown', function(e) {
+  
+  const playSound = function(e) {
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
     const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
     if (!audio) return;
     audio.currentTime = 0;
     audio.play();
     key.classList.add('playing');
-  });
-
-function removeTransition(e) {
-  if (e.propertyName !== 'transform') return;
-  this.classList.remove('playing')
-}
-
+  };
+  
+  function removeTransition(e) {
+    if (e.propertyName !== 'transform') return;
+    this.classList.remove('playing')
+  }
+  
   const keys = document.querySelectorAll('.key');
-    keys.forEach(key => key.addEventListener('transitionend', removeTransition));
-    
-
-
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+  
+  
+  window.addEventListener('keydown', playSound)
+  
 </script>
 
 
