--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -16,6 +16,8 @@
     </div>
     <div data-key="83" class="key">
       <kbd>S</kbd>
+      <span class="sound">hihat</span>
+
     </div>
     <div data-key="68" class="key">
       <kbd>D</kbd>
