--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -39,6 +39,16 @@
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
 
+      let i =0;
+
+      while (inventors.length > i) {
+        let inventor = inventors[i].year   
+        if (inventor < 1600 &&  inventor > 1500 )
+          console.table(inventor)
+        i += 1;
+      }
+
+
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
 
