--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -39,14 +39,12 @@
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
 
-      let i =0;
 
-      while (inventors.length > i) {
-        let inventor = inventors[i].year   
-        if (inventor < 1600 &&  inventor > 1500 )
-          console.table(inventor)
-        i += 1;
-      }
+      const earlyBirthYear = inventors.filter((inventor) => {
+         if (inventor.year > 1500 && inventor.year < 1600 )
+        return inventor.year});
+
+        console.table(earlyBirthYear)
 
 
     // Array.prototype.map()
