--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -50,6 +50,11 @@
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
 
+    console.log("USING THE MAP FUNCTION")
+        const getNames = inventors.map((inventor) => (`${inventor.first} ${inventor.last}`));
+
+        console.log(getNames)
+
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
